# the-python-craftsman-book

./: README.md  call_counter.py  class_decorator.py  click_test.py  decorator_replace_function.py  first_album.py  first_album_new.py  provider_number.py  pyproject.toml
chapter-13/: conftest.py  string_utils.py  test_string_utils.py
chapter_5/: incr_by_one_eafp.py  incr_by_one_lbyl.py
src/the_python_craftsman_book/: __init__.py
